--- a/Caploitte-iOS-assignment/Caploitte-iOS-assignment/common/views/Base.lproj/Main.storyboard
+++ b/Caploitte-iOS-assignment/Caploitte-iOS-assignment/common/views/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Profile-->
         <scene sceneID="pKV-Sr-vU8">
             <objects>
-                <viewController id="Ck9-o5-DPQ" customClass="ProfileScreenViewController" customModule="Caploitte_iOS_assignment" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewVC" id="Ck9-o5-DPQ" customClass="ProfileScreenViewController" customModule="Caploitte_iOS_assignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IXS-Fm-8ln">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="769"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -323,16 +323,16 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ssx-HC-Dph">
-                                                <rect key="frame" x="0.0" y="0.0" width="393" height="300"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="355"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="300" id="mWZ-ay-8iH"/>
+                                                    <constraint firstAttribute="height" constant="355" id="mWZ-ay-8iH"/>
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8B-ZD-zWv">
                                                 <rect key="frame" x="0.0" y="270" width="393" height="582"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L58-xA-WUM">
-                                                        <rect key="frame" x="20" y="95" width="353" height="18"/>
+                                                        <rect key="frame" x="20" y="65" width="353" height="18"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -345,7 +345,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XP8-e0-Ii1">
-                                                <rect key="frame" x="35" y="220" width="323" height="125"/>
+                                                <rect key="frame" x="35" y="190" width="323" height="125"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAj-vf-5nN">
                                                         <rect key="frame" x="20" y="10" width="283" height="17"/>
@@ -389,7 +389,7 @@
                                             <constraint firstItem="f8B-ZD-zWv" firstAttribute="leading" secondItem="WOr-Wm-4V8" secondAttribute="leading" id="CXU-VG-ZwK"/>
                                             <constraint firstItem="L58-xA-WUM" firstAttribute="top" secondItem="XP8-e0-Ii1" secondAttribute="bottom" constant="20" id="FeS-f2-tuk"/>
                                             <constraint firstAttribute="trailing" secondItem="Ssx-HC-Dph" secondAttribute="trailing" id="MYR-i1-xHI"/>
-                                            <constraint firstItem="XP8-e0-Ii1" firstAttribute="top" secondItem="WOr-Wm-4V8" secondAttribute="top" constant="220" id="Tc9-12-BgX"/>
+                                            <constraint firstItem="XP8-e0-Ii1" firstAttribute="top" secondItem="WOr-Wm-4V8" secondAttribute="top" constant="190" id="Tc9-12-BgX"/>
                                             <constraint firstAttribute="bottom" secondItem="f8B-ZD-zWv" secondAttribute="bottom" id="VaN-Be-tTS"/>
                                             <constraint firstItem="Ssx-HC-Dph" firstAttribute="top" secondItem="WOr-Wm-4V8" secondAttribute="topMargin" constant="-67" id="Vr2-DU-yVQ"/>
                                             <constraint firstItem="Ssx-HC-Dph" firstAttribute="leading" secondItem="WOr-Wm-4V8" secondAttribute="leading" id="en3-Lt-udC"/>
